tdf#90926 remove footnote mark from cross reference

Change-Id: I0354bca230395d8061bb6d9ce9f9b7a6229b73a7
Reviewed-on: https://gerrit.libreoffice.org/16234
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Andras Timar <andras.timar@collabora.com>
(cherry picked from commit 5956cbcbd4b59186d23a34f9d56892266482f251)